--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
+
+    <ul>
+        <li><a href="recipes/pesto_pasta.html">Pesto Pasta</a></li>
+    </ul>
+    
 </body>
 </html>
