Added Pesto Pasta image and recipe

--- a/recipes/pesto_pasta.html
+++ b/recipes/pesto_pasta.html
@@ -8,6 +8,26 @@
 <body>
     <h1>Pesto Pasta</h1>
 
+    <img src="../images/pesto_pasta.jpg" alt="Picture of the Pesto Pasta recipe" width="600">
+
+    <h3>Description</h3>
+    <p>This top-rated pesto pasta recipe, which comes together in just 15 minutes, is the perfect quick and easy weeknight dinner.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li><strong>Pasta</strong></li>
+        <li><strong>Onion</strong> and <strong>oil</strong></li>
+        <li><strong>Pesto</strong></li>
+        <li><strong>Salt</strong> and <strong>pepper</strong></li>
+        <li><strong>Parmesan</strong></li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Boil your favorite pasta in salted water and drain.</li>
+        <li>Cook the onion in oil, then stir in the basil pesto and seasonings.</li>
+        <li>Add the pesto mixture to the hot pasta and toss with cheese.</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
