--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <ul>
         <li><a href="recipes/pesto_pasta.html">Pesto Pasta</a></li>
+        <li><a href="recipes/boeuf_bourguignon.html">Boeuf Bourguinon</a></li>
     </ul>
-    
+
 </body>
 </html>
