Corrected a typo on an html element

--- a/recipes/boeuf_bourguignon.html
+++ b/recipes/boeuf_bourguignon.html
@@ -15,7 +15,7 @@
 
     <h3>Ingredients</h3>
     <ul>
-        <li>¼ cup vegetable oil/li>
+        <li>¼ cup vegetable oil</li>
         <li>5 onions, sliced</li>
         <li>2 pounds lean beef, cut into 1-inch cubes</li>
         <li>1 ½ tablespoons all-purpose flour</li>
