Added duck à l'orange page and link from index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/pesto_pasta.html">Pesto Pasta</a></li>
         <li><a href="recipes/boeuf_bourguignon.html">Boeuf Bourguinon</a></li>
+        <li><a href="recipes/duck_a_lorange.html">Duck à l'orange</a></li>
     </ul>
 
 </body>
